# ordered-list-benchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  make_report.py  requirements.txt  run_benchmark.sh
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: script.js
docs/pages/: param_('Windows', 'AMD Ryzen 7 7700X 8-Core Processor').html  param_10_100.html  param_60_109.html
include/: sorted_list_arr_bin.h  sorted_list_arr_naive.h  sorted_list_base.h  sorted_list_set.h
output/: benchmark_Darwin_Apple_M4_Pro_20260321_133642.csv  benchmark_Darwin_Apple_M4_Pro_20260321_133642.json  benchmark_Darwin_Apple_M4_Pro_20260321_134227.csv  benchmark_Darwin_Apple_M4_Pro_20260321_134227.json  benchmark_Darwin_Apple_M4_Pro_20260321_134535.csv  benchmark_Darwin_Apple_M4_Pro_20260321_134535.json  benchmark_Darwin_Apple_M4_Pro_20260321_134755.csv  benchmark_Darwin_Apple_M4_Pro_20260321_134755.json  benchmark_Darwin_Apple_M4_Pro_20260321_135126.csv  benchmark_Darwin_Apple_M4_Pro_20260321_135126.json  benchmark_Darwin_Apple_M4_Pro_20260321_135447.csv  benchmark_Darwin_Apple_M4_Pro_20260321_135447.json  benchmark_Windows_AMD_Ryzen_7_7700X_8-Core_Processor_20260322_105527.csv  benchmark_Windows_AMD_Ryzen_7_7700X_8-Core_Processor_20260322_105527.json  benchmark_Windows_AMD_Ryzen_7_7700X_8-Core_Processor_20260322_105913.csv  benchmark_Windows_AMD_Ryzen_7_7700X_8-Core_Processor_20260322_105913.json
src/: main.cpp
